--- a/index.html
+++ b/index.html
@@ -1,43 +1,4 @@
-<script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
-
-                // Convert sheet to JSON to filter blank rows
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                // Filter out blank rows (rows where all cells are empty, null, or undefined)
-                var filteredData = jsonData.filter(row => row.some(filledCell));
-
-                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                // Fallback
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
-
-                // Convert filtered JSON back to CSV
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-        </script><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -288,13 +249,15 @@
             gap: 1.5rem;
         }
         .item-image {
-            width: 100%;
-            height: 150px;
-            object-fit: cover;
+            width: 260px; /* Uniform width */
+            height: 180px; /* Uniform height */
+            object-fit: contain; /* Preserve aspect ratio, show entire image */
+            object-position: center; /* Center the image within the container */
             border-radius: 0.5rem;
             border: 1px solid #e5e7eb;
             background-color: #f3f4f6;
-            margin-bottom: 1rem;
+            margin: 0 auto 1rem auto; /* Center the image horizontally and add bottom margin */
+            display: block; /* Ensure the image is a block element for centering */
         }
         /* Stat styling */
         .stat-label {
@@ -700,7 +663,7 @@
                 card.className = "inventory-card";
                 card.setAttribute("data-index", index);
                 card.innerHTML = `
-                    <img src="images/${item.name.toLowerCase().replace(/\s+/g, '-')}.jpg" alt="${item.name}" class="item-image" onerror="this.src='https://via.placeholder.com/150?text=${item.name}'">
+                    <img src="images/${item.name.toLowerCase().replace(/\s+/g, '-')}.jpg" alt="${item.name}" class="item-image" onerror="this.src='https://via.placeholder.com/260x180?text=${item.name}'">
                     <p class="text-lg font-semibold text-gray-800 mb-3">${item.name}</p>
                     <div class="flex justify-between items-center mb-2">
                         <span class="stat-label"><i class="fas fa-boxes"></i> Total:</span>
